test_case/rust-lang_rust/52890_409084333.rs
plain
[00:42:36] 
[00:42:36] - error: cannot test inner function
[00:42:36] -   --> $DIR/test-inner-fn.rs:15:5
[00:42:36] -    |
[00:42:36] - LL |     #[test] //~ ERROR cannot test inner function [unnameable_test_functions]
[00:42:36] -    |
[00:42:36] -    = note: requested on the command line with `-D unnameable-test-functions`
[03625020 .
2274628 ./obj
---
145460 ./obj/build/bootstrap/debug/incremental
133976 ./obj/build/x86_64-unknown-linux-gnu/stage1-rustc/x86_64-unknown-linux-gnu
133972 ./obj/build/x86_64-unknown-linux-gnu/stage1-rustc/x86_64-unknown-linux-gnu/release
130592 ./obj/build/bootstrap/debug/incremental/bootstrap-c7ee2tfsizs
130588 ./obj/build/bootstrap/debug/incremental/bootstrap-c7ee2tfsizs/s-f3el8jlfcp-1th506i-3t5kexjst7huj
128816 ./obj/build/x86_64-unknown-linux-gnu/stage0-bootstrap-tools/x86_64-unknown-linux-gnu/release
122972 ./obj/build/x86_64-unknow
